[project]
name = "the_network_backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Christopher Waschke",email = "chrisdwaschke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.37,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
packages = [
    {include = "the_network_backend"}
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
